# ffmpegthumbnailer-rs

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: test.yml
src/: error.rs  lib.rs  movie_decoder.rs  thumbnailer.rs  video_frame.rs
